2 tap on ios fix

--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,12 @@ header {
     color: white;
     cursor: pointer;
     padding: 15px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
     &::after {
         display: none;
         content: '';
@@ -176,6 +182,6 @@ header {
     }
 }
 
-#toTopBtn:hover {
+/*#toTopBtn:hover {
     background-color: #c9302c;
-}
+}*/
